--- a/oidc-okta20/package.json
+++ b/oidc-okta20/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@okta/okta-auth-js": "^1.13.0",
     "angular-oauth2-oidc": "^3.1.4",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
